tests/unit/default/syntax-error/162-alter-table-dot-name-to.x.t
---- IN ----
*%table.name=>|
---- OUT ----
---- ERR ----
syntax: expected <name> after `*%table.name=>` near `|` at position 14 - at line 1
---- EXIT ----
1
